--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -16,6 +16,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css" type="text/css">
+    <link rel="stylesheet" href="styles/common.css" type="text/css">
     <link rel="stylesheet" href="styles/sb-admin-2.css" type="text/css">
     <link rel="stylesheet" href="styles/timeline.css" type="text/css">
     <link rel="stylesheet" href="lib/css/metisMenu.min.css" type="text/css">
