--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -4,7 +4,7 @@
             <!-- <sidebar-search></sidebar-search> -->
             
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.order"><i class="fa fa-twitter fa-fw"></i> Order</a>
+                <a ui-sref="dashboard.order"><i class="fa fa-file-text-o fa-fw"></i> {{ 'menu.order' | translate}}</a>
             </li>
             
             <li ui-sref-active="active">
