Change label to restaurant

--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand">Master System</a>
+        <a class="navbar-brand">Restaurant System</a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
