Add menu feature

--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -4,7 +4,7 @@
             <!-- <sidebar-search></sidebar-search> -->
             
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.menu"><i class="fa fa-twitter fa-fw"></i> Menu Management</a>
+                <a ui-sref="dashboard.menu.search"><i class="fa fa-list fa-fw"></i> Menu Management</a>
             </li>
             
             <li ui-sref-active="active">
