--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -197,6 +197,10 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
+        		<a ui-sref="dashboard.menu.search"><i class="fa fa-list fa-fw"></i> {{'menu.menu' | translate}}</a>
+            </li>
+            <li class="divider"></li>
+        	<li>
         		<a ui-sref="dashboard.user.search"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
             </li>
             <!-- <li class="divider"></li>
