--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -208,7 +208,7 @@
     
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i> {{ principal.userNameShow }}
         </a>
         <ul class="dropdown-menu dropdown-user">
             <li><a ui-sref="dashboard.profile"><i class="fa fa-user fa-fw"></i> {{'menu.profile' | translate}}</a>
