--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -46,6 +46,7 @@
     <script src="lib/sockjs.min.js"></script>
     <script src="lib/stomp.min.js"></script>
     <script src="lib/ng-stomp.min.js"></script>
+    <script src="lib/angular-base64-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
