--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="lib/css/loading-bar.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -47,6 +48,7 @@
     <script src="lib/stomp.min.js"></script>
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/angular-base64-upload.min.js"></script>
+    <script src="lib/xeditable.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
