--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -197,10 +197,13 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
+        		<a ui-sref="dashboard.menu.search"><i class="fa fa-list fa-fw"></i> {{'menu.menu' | translate}}</a>
+            </li>
+            <li>
         		<a ui-sref="dashboard.menu_type"><i class="fa fa-indent fa-fw"></i> {{'menu.menu_type' | translate}}</a>
             </li>
-        	<li>
-        		<a ui-sref="dashboard.menu.search"><i class="fa fa-list fa-fw"></i> {{'menu.menu' | translate}}</a>
+            <li>
+        		<a ui-sref="dashboard.table_manage"><i class="fa fa-square fa-fw"></i> {{'menu.table_manage' | translate}}</a>
             </li>
             <li class="divider"></li>
         	<li>
