--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -4,7 +4,7 @@
             <!-- <sidebar-search></sidebar-search> -->
             
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.dictionary"><i class="fa fa-twitter fa-fw"></i> dictionary</a>
+                <a ui-sref="dashboard.table_land"><i class="fa fa-square fa-fw"></i> {{'menu.table_land' | translate}}</a>
             </li>
             
             <li ui-sref-active="active">
