--- a/backend/src/main/webapp/app/scripts/directives/table_land/table.html
+++ b/backend/src/main/webapp/app/scripts/directives/table_land/table.html
@@ -1,13 +1,13 @@
-<div class="col-lg-3 col-md-6">
+<div class="col-lg-2 col-md-6">
     <div class="panel panel-{{colour}}">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-xs-3">
-                    <i class="fa fa-{{type}} fa-5x"></i>
+                    <i class="fa fa-{{type}} fa-3x"></i>
                 </div>
                 <div class="col-xs-9 text-right">
                     <div class="huge">{{ tablename }}</div>
-                    <div>โต๊ะ</div>
+                    <div>{{'table_land.directive.table' | translate}}</div>
                 </div>
             </div>
         </div>
