--- a/backend/src/main/webapp/app/scripts/directives/table_land/table.html
+++ b/backend/src/main/webapp/app/scripts/directives/table_land/table.html
@@ -1,21 +1,21 @@
-<div class="col-lg-2 col-md-6">
+<div class="col-lg-1 col-md-3">
     <div class="panel panel-{{colour}}">
         <div class="panel-heading">
             <div class="row">
-                <div class="col-xs-3">
-                    <i class="fa fa-{{type}} fa-3x"></i>
+                <div class="col-xs-12 text-center">
+                    <i class="fa fa-{{type}} fa-2x"></i>
                 </div>
-                <div class="col-xs-9 text-right">
-                    <div class="huge">{{ tablename }}</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <div style="font-size: 20px;">{{ tablename }}</div>
                     <div>{{'table_land.directive.table' | translate}}</div>
-                </div>
+                </div>            
             </div>
         </div>
         <a ui-sref="{{goto}}">
-            <div class="panel-footer">
-                <span class="pull-left">View Details</span>
-                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                <div class="clearfix"></div>
+            <div class="panel-footer text-center">
+                <span><i class="fa fa-arrow-circle-right"></i></span>
             </div>
         </a>
     </div>
