--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -3,10 +3,12 @@
         <ul class="nav in" id="side-menu">
             <!-- <sidebar-search></sidebar-search> -->
             
-            <li ui-sref-active="active">
+            <!-- <li ui-sref-active="active">
                 <a ui-sref="dashboard.table_land.search"><i class="fa fa-square fa-fw"></i> {{'menu.table_land' | translate}}</a>
+            </li> -->
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.sale.search"><i class="fa fa-list-alt fa-fw"></i> {{'menu.sale' | translate}}</a>
             </li>
-            
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
