--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -7,7 +7,7 @@
                 <a ui-sref="dashboard.table_land.search"><i class="fa fa-square fa-fw"></i> {{'menu.table_land' | translate}}</a>
             </li> -->
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.sale.search"><i class="fa fa-list-alt fa-fw"></i> {{'menu.sale' | translate}}</a>
+                <a ui-sref="dashboard.sale.search"><i class="fa fa-shopping-cart fa-fw"></i> {{'menu.sale' | translate}}</a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
