--- a/backend/src/main/webapp/app/scripts/directives/sale/sale.html
+++ b/backend/src/main/webapp/app/scripts/directives/sale/sale.html
@@ -1,7 +1,7 @@
-<div class="col-lg-1 col-md-3">
+<div class="col-lg-2 col-md-3">
     <div class="panel panel-{{colour}}">
         <div class="panel-heading">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-xs-12 text-center">
                     <i class="fa fa-{{type}} fa-2x"></i>
                 </div>
@@ -11,7 +11,20 @@
                     <div style="font-size: 20px;">{{ tablename }}</div>
                     <div>{{ cusname }}</div>
                 </div>            
+            </div> -->
+            
+            <div class="row">
+                <div class="col-xs-3">
+                    <i class="fa fa-{{type}} fa-3x"></i>
+                </div>
+                <div class="col-xs-9 text-right" style="font-size: 30px;">
+                    {{tablename}}
+                </div>
+                <div class="row text-center">
+                	{{cusname}}
+                </div>
             </div>
+            
         </div>
         <a ui-sref="{{goto}}">
             <div class="panel-footer text-center">
