--- a/backend/src/main/webapp/app/scripts/directives/sale/sale.html
+++ b/backend/src/main/webapp/app/scripts/directives/sale/sale.html
@@ -18,10 +18,10 @@
                     <i class="fa fa-{{type}} fa-3x"></i>
                 </div>
                 <div class="col-xs-9 text-right" style="font-size: 30px;">
-                    {{tablename}}
+                    {{ tablename }}
                 </div>
-                <div class="row text-center">
-                	{{cusname}}
+                <div class="col-xs-12 text-center">
+                	{{ cusname }}
                 </div>
             </div>
             
