--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -50,6 +50,7 @@
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
     <script src="lib/checklist-model.js"></script>
+    <script src="lib/nicEdit-latest.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
