--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -14,7 +14,9 @@
     <!-- endbuild -->
     
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+	<!-- <link rel="icon" href="../favicon2.ico" /> -->
+	<link rel="icon" href="../favicon2.ico">
+    
     <link rel="stylesheet" href="styles/main.css" type="text/css">
     <link rel="stylesheet" href="styles/sb-admin-2.css" type="text/css">
     <link rel="stylesheet" href="styles/timeline.css" type="text/css">
