--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/colorpicker.min.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -52,6 +53,7 @@
     <script src="lib/xeditable.min.js"></script>
     <script src="lib/checklist-model.js"></script>
     <script src="lib/nicEdit-latest.js"></script>
+    <script src="lib/bootstrap-colorpicker-module.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
