--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>SMS.</title>
+    <title>E-Sender.</title>
     <meta name="description" content="">
     <meta name="unauthorized" content="true">
     <meta name="viewport" content="width=device-width">
