--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -7,10 +7,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand">Master System</a>
+        <a class="navbar-brand">Debt Management System</a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
 
-    <sidebar></sidebar>
+    <!-- <sidebar></sidebar> -->
 </nav>
