--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -197,6 +197,13 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
+        		<a ui-sref="dashboard.position"><i class="fa fa-angle-right fa-fw"></i> ตำแหน่งงาน</a>
+            </li>
+        	<li>
+        		<a ui-sref="dashboard.memberType"><i class="fa fa-angle-right fa-fw"></i> ประเภทสมาชิก</a>
+            </li>
+            <li class="divider"></li>
+            <li>
         		<a ui-sref="dashboard.user.search"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
             </li>
             <!-- <li class="divider"></li>
