--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -10,7 +10,7 @@
                         <a ui-sref="dashboard.register.search">ระบบสมาชิก</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.reminder">ระบบเตือนต่ออายุสมาชิก</a>
+                        <a ui-sref="dashboard.renewal">ระบบเตือนต่ออายุสมาชิก</a>
                     </li>
                 </ul>
             </li>
