--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -49,6 +49,7 @@
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/angular-cookies.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
+    <script src="lib/angular-base64-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
