--- a/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
+++ b/backend/src/main/webapp/app/scripts/directives/sidebar/sidebar.html
@@ -22,7 +22,7 @@
                         <a ui-sref="dashboard.importFingerScan">Import Finger Scan File</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.renewal">สรุปการใช้บริการสมาชิก</a>
+                        <a ui-sref="dashboard.fingerPrintReport">สรุปการใช้บริการสมาชิก</a>
                     </li>
                 </ul>
             </li>
