--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -51,6 +51,7 @@
     <script src="lib/xeditable.min.js"></script>
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/datetime.js"></script>
+    <script src="lib/angular-file-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
