--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -52,6 +52,8 @@
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/datetime.js"></script>
     <script src="lib/angular-file-upload.min.js"></script>
+    <script src="lib/angular-dateparser.min.js"></script>
+    <script src="lib/angular-timepicker.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
