--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -30,7 +30,7 @@
     <!-- bower:js -->
     <script src="lib/jquery.min.js"></script>
     <script src="lib/angular.min.js"></script>
-    <script src="i18n/angular-locale_th.js"></script>
+    <script src="i18n/angular-locale_th-th.js"></script>
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
     <script src="lib/angular-animate.min.js"></script>
