--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -8,6 +8,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand">SPTR Trader</a>
+        <img alt="" src="img/LOGO_REP_NEW.png" style="height: 90px; position: absolute; right: 30px; top: 58px;">
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
