--- a/backend/src/main/webapp/app/scripts/directives/report/money.html
+++ b/backend/src/main/webapp/app/scripts/directives/report/money.html
@@ -6,7 +6,7 @@
 	    	</div>
 	    </a>
         <div class="panel-footer text-center">
-        	{{ moneyValue }}
+        	<i class="fa fa-btc"></i> <strong>{{ moneyValue }}-</strong>
         </div>
     </div>
 </div>
