--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -12,5 +12,5 @@
     <!-- /.navbar-header -->
     <header-notification></header-notification>
 
-    <sidebar></sidebar>
+    <sidebar principal="{{ principal.authorities[0].authority }}"></sidebar>
 </nav>
