--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -191,7 +191,7 @@
      -->
     
     
-    <li class="dropdown" ng-show="principal.authorities[0].authority == 'ROLE_ADMIN'">
+    <li class="dropdown" ng-show="principal.authorities[0].authority == 'ROLE_ADMIN' || principal.authorities[0].authority == 'ROLE_OWNER'">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-gear fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
