--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -47,6 +47,7 @@
     <script src="lib/stomp.min.js"></script>
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/angular-cookies.min.js"></script>
+    <script src="lib/ngStorage.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
