--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -273,7 +273,7 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
-        		<a ui-sref="dashboard.employer.search"><i class="fa fa-bank fa-fw"></i> ผู้ว่าจ้าง</a>
+        		<a ui-sref="dashboard.product.search"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
             </li>
             <li class="divider"></li>
         	<li>
