--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -267,7 +267,7 @@
     
     
     <!-- <li class="dropdown" ng-show="principal.authorities[0].authority == 'ROLE_ROOT'"> -->
-    <li class="dropdown">
+    <li class="dropdown" ng-if="authority == 'ROLE_SUPERADMIN' || authority == 'ROLE_ADMIN'">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-gear fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
