--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -14,7 +14,7 @@
     <div class="navbar-header">
     	
 	    	<div class="btn-group" style="padding-top: 8px;" ng-hide="productsSelect == null">
-	    	  <label class="btn btn-primary" ng-if="productsSelect.length == 1">
+	    	  <label class="btn btn-primary" ng-if="productsSelect.length == 1" style="cursor: default;">
 	    	  	{{ productsSelect[0].productName }}
 	    	  </label>
 	    	
