--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -48,6 +48,7 @@
     <script src="lib/ng-stomp.min.js"></script>
     <script src="lib/angular-cookies.min.js"></script>
     <script src="lib/ngStorage.min.js"></script>
+    <script src="lib/angular-file-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
