--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -272,7 +272,7 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
-        		<a ui-sref="dashboard.product.search"><i class="fa fa-upload fa-fw"></i> นำเข้างานใหม่</a>
+        		<a ui-sref="dashboard.newtask"><i class="fa fa-upload fa-fw"></i> นำเข้างานใหม่</a>
             </li>
             <li class="divider"></li>
         	<li>
