--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="lib/css/loading-bar.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/dnd_advanced.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -49,6 +50,7 @@
     <script src="lib/angular-cookies.min.js"></script>
     <script src="lib/ngStorage.min.js"></script>
     <script src="lib/angular-file-upload.min.js"></script>
+    <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
