--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -51,6 +51,7 @@
     <script src="lib/ngStorage.min.js"></script>
     <script src="lib/angular-file-upload.min.js"></script>
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
+    <script src="lib/sticky.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
