--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="lib/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/dnd_advanced.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
@@ -52,6 +53,7 @@
     <script src="lib/angular-file-upload.min.js"></script>
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     <script src="lib/sticky.min.js"></script>
+    <script src="lib/xeditable.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
