--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -276,7 +276,7 @@
             </li>
             <li class="divider"></li>
         	<li>
-        		<a ui-sref="dashboard.assigntask"><i class="fa fa-facebook fa-fw"></i> จ่ายงาน</a>
+        		<a ui-sref="dashboard.assigntask"><i class="fa fa-facebook fa-fw"></i> ข้อมูลการนำเข้า</a>
             </li>
         </ul>
     </li>
