--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -272,11 +272,11 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
-        		<a ui-sref="dashboard.newtask"><i class="fa fa-upload fa-fw"></i> นำเข้างานใหม่</a>
+        		<a ui-sref="dashboard.newtask"><i class="fa fa-download fa-fw"></i> นำเข้างานใหม่</a>
             </li>
             <li class="divider"></li>
         	<li>
-        		<a ui-sref="dashboard.assigntask"><i class="fa fa-facebook fa-fw"></i> ข้อมูลการนำเข้า</a>
+        		<a ui-sref="dashboard.assigntask"><i class="fa fa-file-excel-o fa-fw"></i> ข้อมูลการนำเข้า</a>
             </li>
         </ul>
     </li>
