--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -54,6 +54,7 @@
     <script src="lib/angular-drag-and-drop-lists.min.js"></script>
     <script src="lib/sticky.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
+    <script src="lib/ng-contextmenu.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
