--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="lib/css/toaster.min.css" type="text/css">
     <link rel="stylesheet" href="lib/css/dnd_advanced.css" type="text/css">
     <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/animate.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
