--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -56,6 +56,7 @@
     <script src="lib/sticky.min.js"></script>
     <script src="lib/xeditable.min.js"></script>
     <script src="lib/ng-contextmenu.min.js"></script>
+    <script src="lib/angular-base64-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
