--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -278,6 +278,10 @@
         	<li>
         		<a ui-sref="dashboard.assigntask"><i class="fa fa-file-excel-o fa-fw"></i> ข้อมูลการนำเข้า</a>
             </li>
+            <li class="divider"></li>
+        	<li>
+        		<a ui-sref="dashboard.tasktowork"><i class="fa fa-file-excel-o fa-fw"></i> ข้อมูลงาน</a>
+            </li>
         </ul>
     </li>
     
