--- a/backend/src/main/webapp/app/scripts/directives/header/header.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header.html
@@ -30,6 +30,9 @@
     </div>
     
     <header-notification></header-notification>
+    
+    <img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" ng-show="photoSource"
+         style="position: absolute; right: 35px; top: 50px; height: 90px;">
 
     <!-- <sidebar></sidebar> -->
 </nav>
