--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -59,6 +59,7 @@
     <script src="lib/ng-contextmenu.min.js"></script>
     <script src="lib/angular-base64-upload.min.js"></script>
     <script src="lib/angular-dateparser.min.js"></script>
+    <script src="lib/angular-timepicker.min.js"></script>
     
     <script src="lib/bootstrap-datepicker.js"></script>
     <script src="lib/bootstrap-datepicker-thai.js"></script>
