--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -293,11 +293,11 @@
         		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> ข้อมูลการนำเข้า</a>
             </li>
             <li class="divider" ng-if="supAadAsubv"></li>
-        	<li ng-if="supAadAsubv || authority == 'ROLE_USER'">
+        	<li ng-if="user = (supAadAsubv || authority == 'ROLE_USER')">
         		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-desktop fa-fw"></i> ผลการติดตาม</a>
             </li>
-            <li class="divider" ng-if="supAadAsubv || authority == 'ROLE_USER'"></li>
-        	<li ng-if="supAadAsubv || authority == 'ROLE_USER'">
+            <li class="divider" ng-if="user"></li>
+        	<li ng-if="user">
         		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> งานของฉัน</a>
             </li>
         </ul>
