--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -290,7 +290,7 @@
             </li>
             <li class="divider" ng-if="supAad"></li>
         	<li ng-if="supAadAsubv = (supAad || authority == 'ROLE_SUPERVISOR')">
-        		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> ข้อมูลการนำเข้า</a>
+        		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> จัดการข้อมูลงาน</a>
             </li>
             <li class="divider" ng-if="supAadAsubv"></li>
         	<li ng-if="user = (supAadAsubv || authority == 'ROLE_USER')">
