--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -274,14 +274,6 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li ng-if="supAad = (authority == 'ROLE_SUPERADMIN' || authority == 'ROLE_ADMIN')">
-        		<a ui-sref="dashboard.actionCodeConf" style="color: #337AB7;"><i class="fa fa-cog fa-fw"></i> ตั้งค่า Action Code</a>
-            </li>
-            <li class="divider" ng-if="supAad"></li>
-            <li ng-if="supAad">
-        		<a ui-sref="dashboard.resultCodeConf" style="color: #337AB7;"><i class="fa fa-cog fa-fw"></i> ตั้งค่า Result Code</a>
-            </li>
-            <li class="divider" ng-if="supAad"></li>
-        	<li ng-if="supAad">
         		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> แบบฟอร์ม Notice</a>
             </li>
         	<li class="divider" ng-if="supAad"></li>
@@ -308,7 +300,15 @@
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-gear fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
-        <ul class="dropdown-menu dropdown-user">
+        <ul class="dropdown-menu dropdown-user">        
+        	<li>
+        		<a ui-sref="dashboard.actionCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Action Code</a>
+            </li>
+            <li class="divider"></li>
+            <li>
+        		<a ui-sref="dashboard.resultCodeConf" style="color: #337AB7;"><i class="fa fa-random fa-fw"></i> Result Code</a>
+            </li>
+            <li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.product.search" style="color: #337AB7;"><i class="fa fa-bank fa-fw"></i> โปรดักส์</a>
             </li>
