--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -273,30 +273,36 @@
             <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
-        	<li ng-if="supAad = (authority == 'ROLE_SUPERADMIN' || authority == 'ROLE_ADMIN')">
-        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> แบบฟอร์ม Notice</a>
-            </li>
-        	<li class="divider" ng-if="supAad"></li>
-        	<li ng-if="supAad">
-        		<a ui-sref="dashboard.newtask" style="color: #337AB7;"><i class="fa fa-download fa-fw"></i> นำเข้างานใหม่</a>
-            </li>
-            <li class="divider" ng-if="supAad"></li>
-        	<li ng-if="supAadAsubv = (supAad || authority == 'ROLE_SUPERVISOR')">
+        	<li ng-if="group2">
         		<a ui-sref="dashboard.assigntask" style="color: #337AB7;"><i class="fa fa-pencil-square-o fa-fw"></i> จัดการข้อมูลงาน</a>
             </li>
-            <li class="divider" ng-if="supAadAsubv"></li>
-        	<li ng-if="user = (supAadAsubv || authority == 'ROLE_USER')">
+            <li class="divider" ng-if="group2"></li>
+        	<li ng-if="group3">
         		<a ui-sref="dashboard.traceResult" style="color: #337AB7;"><i class="fa fa-desktop fa-fw"></i> ผลการติดตาม</a>
             </li>
-            <li class="divider" ng-if="user"></li>
-        	<li ng-if="user">
-        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> งานของฉัน</a>
+            <li class="divider" ng-if="group3"></li>
+        	<li ng-if="group3">
+        		<a ui-sref="dashboard.working.search" style="color: #337AB7;"><i class="fa fa-gavel fa-fw"></i> {{ group4 ? 'งานของฉัน' : 'ข้อมูลงาน' }}</a>
             </li>
         </ul>
     </li>
     
+    <li class="dropdown" ng-if="group1">
+        <a class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-upload fa-fw"></i>  <i class="fa fa-caret-down"></i>
+        </a>
+        <ul class="dropdown-menu dropdown-user">
+        	<li>
+        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> แบบฟอร์ม Notice</a>
+            </li>
+        	<li class="divider"></li>
+        	<li>
+        		<a ui-sref="dashboard.newtask" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้างานใหม่</a>
+            </li>
+        </ul>
+    </li>
     
-    <li class="dropdown" ng-if="authority == 'ROLE_SUPERADMIN' || authority == 'ROLE_ADMIN'">
+    <li class="dropdown" ng-if="group1">
         <a class="dropdown-toggle" data-toggle="dropdown">
             <i class="fa fa-gear fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
