--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -322,10 +322,10 @@
         	<li>
         		<a ui-sref="dashboard.user.search" style="color: #337AB7;"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
             </li>
-            <!-- <li class="divider"></li>
+            <li class="divider"></li>
         	<li>
-        		<a ui-sref="dashboard.setting"><i class="fa fa-users fa-sliders"></i> {{'menu.setting' | translate}}</a>
-            </li> -->
+        		<a ui-sref="dashboard.setting" style="color: #337AB7;"><i class="fa fa-users fa-sliders"></i> {{'menu.setting' | translate}}</a>
+            </li>
         </ul>
     </li>
     
@@ -340,6 +340,10 @@
             <li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.user.search" style="color: #337AB7;"><i class="fa fa-users fa-fw"></i> {{'menu.user' | translate}}</a>
+            </li>
+            <li class="divider"></li>
+        	<li>
+        		<a ui-sref="dashboard.setting" style="color: #337AB7;"><i class="fa fa-users fa-sliders"></i> {{'menu.setting' | translate}}</a>
             </li>
         </ul>
     </li>
