--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -293,7 +293,11 @@
         </a>
         <ul class="dropdown-menu dropdown-user">
         	<li>
-        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> แบบฟอร์ม Notice</a>
+        		<a ui-sref="dashboard.traceResultResport" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์มรายงานการติดตาม</a>
+            </li>
+        	<li class="divider"></li>
+        	<li>
+        		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์ม Notice</a>
             </li>
         	<li class="divider"></li>
         	<li>
