--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -299,6 +299,10 @@
         	<li>
         		<a ui-sref="dashboard.noticeTemplate" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้าแบบฟอร์ม Notice</a>
             </li>
+            <li class="divider"></li>
+        	<li>
+        		<a ui-sref="dashboard.payment" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้า Payment</a>
+            </li>
         	<li class="divider"></li>
         	<li>
         		<a ui-sref="dashboard.newtask" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้างานใหม่</a>
