--- a/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
+++ b/backend/src/main/webapp/app/scripts/directives/header/header-notification/header-notification.html
@@ -301,7 +301,7 @@
             </li>
             <li class="divider"></li>
         	<li>
-        		<a ui-sref="dashboard.payment" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้า Payment</a>
+        		<a ui-sref="dashboard.payment.search" style="color: #337AB7;"><i class="fa fa-file-excel-o fa-fw"></i> นำเข้า Payment</a>
             </li>
         	<li class="divider"></li>
         	<li>
