--- a/backend/src/main/webapp/app/index.html
+++ b/backend/src/main/webapp/app/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="lib/css/xeditable.css" type="text/css">
     <link rel="stylesheet" href="lib/css/animate.css" type="text/css">
     <link rel="stylesheet" href="lib/css/datepicker.css" type="text/css">
+    <link rel="stylesheet" href="lib/css/unicorn-buttons.css" type="text/css">
     <!-- endbuild -->
     
     <!-- build:js(.) scripts/vendor.js -->
